--- a/src/uMod.Rust.csproj
+++ b/src/uMod.Rust.csproj
@@ -17,7 +17,7 @@
     <TargetFramework>net46</TargetFramework>
     <ManagedDir>RustDedicated_Data\Managed</ManagedDir>
     <SteamAppId>258550</SteamAppId>
-    <SteamBranch>public</SteamBranch>
+    <SteamBranch>staging</SteamBranch>
     <SteamLogin>anonymous</SteamLogin>
   </PropertyGroup>
   <ItemGroup>
@@ -27,7 +27,7 @@
     <PackageReference Include="Oxide.References" Version="2.0.*">
       <PrivateAssets>contentfiles;analyzers;build</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="uMod" Version="3.0.3927-develop" />
+    <PackageReference Include="uMod" Version="3.0.3954-develop" />
     <!--<PackageReference Include="uMod.MySql" Version="3.0.*" />
     <PackageReference Include="uMod.SQLite" Version="3.0.*" />-->
     <PackageReference Include="uMod.Unity" Version="3.0.3765-develop" />
