Changed back to public branch from staging

--- a/src/uMod.Rust.csproj
+++ b/src/uMod.Rust.csproj
@@ -17,7 +17,7 @@
     <TargetFramework>net46</TargetFramework>
     <ManagedDir>RustDedicated_Data\Managed</ManagedDir>
     <SteamAppId>258550</SteamAppId>
-    <SteamBranch>staging</SteamBranch>
+    <SteamBranch>public</SteamBranch>
     <SteamLogin>anonymous</SteamLogin>
   </PropertyGroup>
   <ItemGroup>
