--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -138,8 +138,7 @@
       <Output PropertyName="DeployPath" TaskParameter="Lines" />
     </ReadLinesFromFile>
     <PropertyGroup>
-      <DeployPath Condition="'$(SteamBranch).Lower()' != 'public'">$(DeployPath)-$(SteamBranch)</DeployPath>
-      <!--<DeployPath Condition="!$(SteamBranch.Contains(','))">$(DeployPath)-$(SteamBranch)</DeployPath>-->
+      <DeployPath Condition="!$(SteamBranch.Contains('public'))">$(DeployPath)-$(SteamBranch)</DeployPath>
     </PropertyGroup>
     <ItemGroup>
       <DeployFiles Include="$(ProjectDir)\bin\Bundle\$(PackageId)\**\*.*" />
