--- a/nuget.config
+++ b/nuget.config
@@ -11,6 +11,8 @@
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <packageSources>
-    <add key="Oxide" value="https://www.myget.org/f/oxide" />
+    <add key="Oxide - MyGet" value="https://www.myget.org/f/oxide" />
+    <add key="uMod - MyGet" value="https://www.myget.org/f/umod" />
+    <add key="uMod - Bintray" value="https://api.bintray.com/nuget/umod/nuget" />
   </packageSources>
 </configuration>
