Set Steam branch back to public

--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -16,7 +16,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <ManagedDir>RustDedicated_Data\Managed</ManagedDir>
     <SteamAppId>258550</SteamAppId>
-    <SteamBranch>release</SteamBranch>
+    <SteamBranch>public</SteamBranch>
     <SteamLogin>anonymous</SteamLogin>
     <SteamPlatform>windows;linux</SteamPlatform>
   </PropertyGroup>
