--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -19,6 +19,7 @@
     <SteamBranch>staging</SteamBranch>
     <SteamLogin>anonymous</SteamLogin>
     <SteamPlatform>windows;linux</SteamPlatform>
+    <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="GitInfo" Version="2.0.*" />
