Update project files

--- a/nuget.config
+++ b/nuget.config
@@ -11,6 +11,6 @@
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <packageSources>
-    <add key="Oxide" value="https://www.myget.org/f/oxide" />
+    <add key="Oxide" value="https://www.myget.org/f/oxide/api/v3/index.json" />
   </packageSources>
 </configuration>
