Set to .NET version that Rust uses

--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -11,7 +11,7 @@
     <PackageIconUrl>icon.png</PackageIconUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <SteamAppId>258550</SteamAppId>
     <SteamBranch>public</SteamBranch>
