--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -39,8 +39,8 @@
     <Reference Include="Facepunch.UnityEngine" />
     <Reference Include="Fleck" />
     <Reference Include="mscorlib" />
-    <Reference Include="NewAssembly" />
     <Reference Include="Rust.Data" />
+    <Reference Include="Rust.FileSystem" />
     <Reference Include="Rust.Global" />
     <Reference Include="Rust.Platform.Common" />
     <Reference Include="System" />
@@ -55,7 +55,7 @@
     <None Remove="Bundle\**; dependencies\**; *.config; *.opj" />
   </ItemGroup>
   <ItemGroup>
-    <PatchedFiles Include="$(TargetDir)\Assembly-CSharp.dll; $(TargetDir)\Facepunch.Console.dll; $(TargetDir)\Facepunch.Network.dll; $(TargetDir)\Facepunch.Rcon.dll; $(TargetDir)\Facepunch.UnityEngine.dll; $(TargetDir)\NewAssembly.dll" />
+    <PatchedFiles Include="$(TargetDir)\Assembly-CSharp.dll; $(TargetDir)\Facepunch.Console.dll; $(TargetDir)\Facepunch.Network.dll; $(TargetDir)\Facepunch.Rcon.dll; $(TargetDir)\Facepunch.UnityEngine.dll; $(TargetDir)\Rust.FileSystem.dll" />
   </ItemGroup>
   <Target Name="AddGitBranchMeta" BeforeTargets="CoreGenerateAssemblyInfo">
     <Exec Command="git rev-parse --abbrev-ref HEAD" WorkingDirectory="$(MSBuildProjectDirectory)" ConsoleToMSBuild="True">
