--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -40,6 +40,8 @@
     <Reference Include="Facepunch.UnityEngine" />
     <Reference Include="Fleck" />
     <Reference Include="mscorlib" />
+    <Reference Include="Rust.Clans" />
+    <Reference Include="Rust.Clans.Local" />
     <Reference Include="Rust.Data" />
     <Reference Include="Rust.Global" />
     <Reference Include="Rust.Platform.Common" />
@@ -55,7 +57,7 @@
     <None Remove="Bundle\**; dependencies\**; *.config; *.opj" />
   </ItemGroup>
   <ItemGroup>
-    <PatchedFiles Include="$(TargetDir)\Assembly-CSharp.dll; $(TargetDir)\Facepunch.Console.dll; $(TargetDir)\Facepunch.Network.dll; $(TargetDir)\Facepunch.Rcon.dll; $(TargetDir)\Facepunch.Sqlite.dll; $(TargetDir)\Facepunch.UnityEngine.dll" />
+    <PatchedFiles Include="$(TargetDir)\Assembly-CSharp.dll; $(TargetDir)\Facepunch.Console.dll; $(TargetDir)\Facepunch.Network.dll; $(TargetDir)\Facepunch.Rcon.dll; $(TargetDir)\Facepunch.Sqlite.dll; $(TargetDir)\Facepunch.UnityEngine.dll; $(TargetDir)\Rust.Clans.Local.dll" />
   </ItemGroup>
   <Target Name="AddGitBranchMeta" BeforeTargets="CoreGenerateAssemblyInfo">
     <Exec Command="git name-rev --name-only HEAD" WorkingDirectory="$(MSBuildProjectDirectory)" ConsoleToMSBuild="True">
